chore(update): gen-manifests update (#36)